# nix-FLM_Q4NX_Converter

./: convert.py  flake.nix  pyproject.toml
configs/: gemma4.json
q4nx/: gguf_tensor.py  model_converter.py
q4nx/models/: gemma4.py  phi4.py
